--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -79,56 +79,11 @@
         <item name="colorOnError">@color/white</item>
         <item name="colorErrorContainer">@color/m3red_90</item>
         <item name="colorOnErrorContainer">@color/m3red_10</item>
+
+        <!-- Optionally enabled by a user preference setting. -->
+        <item name="dynamicColorThemeOverlay">@style/ThemeOverlay.Material3.DynamicColors.Light
+        </item>
     </style>
-
-    <!-- *************************************************************************************** -->
-
-    <style
-        name="Theme.App.DynamicColors"
-        parent="ThemeOverlay.Material3.DynamicColors.DayNight">
-        <!-- Material3 style attributes -->
-        <item name="tabStyle">@style/Widget.App.TabLayout</item>
-        <item name="circularProgressIndicatorStyle">@style/Widget.App.CircularProgressIndicator
-        </item>
-        <item name="linearProgressIndicatorStyle">@style/Widget.App.LinearProgressIndicator</item>
-        <item name="chipGroupStyle">@style/Widget.App.ChipGroup</item>
-        <item name="snackbarTextViewStyle">@style/Widget.App.Snackbar.TextView</item>
-        <item name="checkboxStyle">@style/Widget.App.CheckBox</item>
-        <item name="radioButtonStyle">@style/Widget.App.RadioButton</item>
-        <item name="materialSwitchStyle">@style/Widget.App.Switch</item>
-        <item name="switchPreferenceStyle">@style/Widget.App.SwitchPreference</item>
-        <item name="materialCardViewStyle">@style/Widget.App.CardView</item>
-
-        <item name="recyclerViewStyle">@style/Widget.App.RecyclerView</item>
-        <item name="android:fastScrollThumbDrawable">@drawable/fastscroll_thumb</item>
-        <item name="android:fastScrollTrackDrawable">@drawable/fastscroll_track</item>
-
-        <item name="floatingActionButtonStyle">@style/Widget.App.FloatingActionButton</item>
-        <item name="extendedFloatingActionButtonStyle">
-            @style/Widget.App.ExtendedFloatingActionButton
-        </item>
-
-
-        <!-- We MUST set these separately! Just setting the common buttonBarButtonStyle is NOT enough -->
-        <item name="buttonBarButtonStyle">@style/Widget.App.DialogButtonBarButtons</item>
-        <item name="buttonBarPositiveButtonStyle">@style/Widget.App.DialogButtonBarButtons</item>
-        <item name="buttonBarNegativeButtonStyle">@style/Widget.App.DialogButtonBarButtons</item>
-        <item name="buttonBarNeutralButtonStyle">@style/Widget.App.DialogButtonBarButtons.Flush
-        </item>
-
-        <!-- Material3 theme OVERLAYS! -->
-        <item name="materialAlertDialogTheme">@style/ThemeOverlay.App.MaterialAlertDialog</item>
-
-        <item name="materialCalendarTheme">@style/ThemeOverlay.App.MaterialCalendarTheme</item>
-        <item name="materialCalendarFullscreenTheme">
-            @style/ThemeOverlay.App.MaterialCalendarFullscreenTheme
-        </item>
-
-        <!-- Chip styles as attributes makes it easy to add chips from code -->
-        <item name="appChipFilterStyle">@style/Widget.Material3.Chip.Filter</item>
-        <item name="appChipInputStyle">@style/Widget.Material3.Chip.Input</item>
-    </style>
-
 
     <!-- Base theme - used by both Day and Night themes. -->
     <style name="Base.Theme.App"
