--- a/app/src/main/res/layout-land/fragment_sync_import.xml
+++ b/app/src/main/res/layout-land/fragment_sync_import.xml
@@ -185,6 +185,7 @@
         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/lbl_sync_date"
             style="@style/TIL.ReadOnly.SyncDate"
+            android:layout_margin="@dimen/til_margin"
             android:visibility="gone"
             app:layout_constraintBottom_toBottomOf="@id/cbx_covers"
             app:layout_constraintStart_toStartOf="parent"
