--- a/app/src/main/res/layout-sw800dp/fragment_edit_book_fields.xml
+++ b/app/src/main/res/layout-sw800dp/fragment_edit_book_fields.xml
@@ -137,9 +137,10 @@
         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/lbl_original_title"
             style="@style/TIL.Text.Title"
+            android:layout_marginStart="@dimen/field_margin_start"
             android:hint="@string/lbl_original_title_long"
-            app:layout_constraintEnd_toEndOf="@id/lbl_title"
-            app:layout_constraintStart_toStartOf="@id/lbl_title"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@id/col1"
             app:layout_constraintTop_toBottomOf="@id/lbl_language"
             >
 
