--- a/app/src/main/res/layout/fragment_edit_book_fields.xml
+++ b/app/src/main/res/layout/fragment_edit_book_fields.xml
@@ -131,8 +131,8 @@
             android:id="@+id/lbl_original_title"
             style="@style/TIL.Text.Title"
             android:hint="@string/lbl_original_title_long"
-            app:layout_constraintEnd_toEndOf="@id/lbl_title"
-            app:layout_constraintStart_toStartOf="@id/lbl_title"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/lbl_language"
             >
 
