--- a/app/src/main/res/layout/fragment_edit_book_fields.xml
+++ b/app/src/main/res/layout/fragment_edit_book_fields.xml
@@ -113,6 +113,8 @@
         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/lbl_language"
             style="@style/TIL.Language"
+            android:layout_width="0dp"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/lbl_title"
             >
