--- a/app/src/main/res/xml/preferences_site_bol.xml
+++ b/app/src/main/res/xml/preferences_site_bol.xml
@@ -20,8 +20,7 @@
   -->
 
 <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
-                  xmlns:app="http://schemas.android.com/apk/res-auto"
-                  xmlns:tools="http://schemas.android.com/tools">
+                  xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <PreferenceCategory
         android:title="@string/site_bol_com">
@@ -31,7 +30,7 @@
             android:icon="@drawable/ic_baseline_language_24"
             android:key="bol.country"
             android:title="@string/lbl_country"
-            tools:summary="Belgium"
+            app:useSimpleSummaryProvider="true"
             />
 
         <SwitchPreference
