--- a/app/src/main/res/xml/preferences_site_stripinfo.xml
+++ b/app/src/main/res/xml/preferences_site_stripinfo.xml
@@ -60,8 +60,8 @@
             android:dependency="stripinfo.enabled"
             android:icon="@drawable/ic_baseline_person_24"
             android:key="stripinfo.host.user"
-            android:summary="@string/preference_not_set"
             android:title="@string/username"
+            app:useSimpleSummaryProvider="true"
             />
 
         <EditTextPreference
