--- a/app/src/main/res/xml/preferences_user_interface.xml
+++ b/app/src/main/res/xml/preferences_user_interface.xml
@@ -34,14 +34,14 @@
             android:title="@string/pt_ui_theme"
             app:useSimpleSummaryProvider="true" />
 
+        <!-- SummaryProvider must be set from code. -->
         <ListPreference
             android:defaultValue="0"
             android:entries="@array/pe_ui_theme_colors"
             android:entryValues="@array/pv_ui_theme_colors"
             android:icon="@drawable/ic_baseline_color_lens_24"
             android:key="ui.theme.color"
-            android:title="@string/pt_ui_theme_colors"
-            app:useSimpleSummaryProvider="true" />
+            android:title="@string/pt_ui_theme_colors" />
 
         <!-- Default: by screen size. -->
         <ListPreference
