--- a/app/src/main/res/xml/locales_config.xml
+++ b/app/src/main/res/xml/locales_config.xml
@@ -21,15 +21,19 @@
 
 <!-- https://developer.android.com/guide/topics/resources/app-languages#use-localeconfig -->
 <locale-config xmlns:android="http://schemas.android.com/apk/res/android">
+    <locale android:name="cz" />
+    <locale android:name="de" />
+    <locale android:name="el" />
     <locale android:name="en" />
     <locale android:name="en-GB" />
-    <locale android:name="de" />
-    <locale android:name="fr" />
-    <locale android:name="nl" />
-    <locale android:name="pt" />
     <locale android:name="es" />
+    <locale android:name="fr" />
     <locale android:name="it" />
-    <locale android:name="el" />
+    <locale android:name="nl" />
+    <locale android:name="pl" />
+    <locale android:name="pt" />
     <locale android:name="ru" />
     <locale android:name="tr" />
+    <locale android:name="vi" />
+    <locale android:name="zh-CN" />
 </locale-config>
