--- a/app/src/main/res/xml/preferences_site_searches.xml
+++ b/app/src/main/res/xml/preferences_site_searches.xml
@@ -53,6 +53,12 @@
         </Preference>
 
         <Preference
+            android:fragment="com.hardbacknutter.nevertoomanybooks.searchengines.dnb.DnbPreferencesFragment"
+            android:key="psk_search_site_dnb"
+            android:title="@string/site_dnb_de">
+        </Preference>
+
+        <Preference
             android:fragment="com.hardbacknutter.nevertoomanybooks.searchengines.googlebooks.GoogleBooksPreferencesFragment"
             android:key="psk_search_site_googlebooks"
             android:title="@string/site_google_books">
