--- a/app/src/main/res/layout/dialog_choose_one.xml
+++ b/app/src/main/res/layout/dialog_choose_one.xml
@@ -26,6 +26,14 @@
     style="@style/Dialog.Content"
     >
 
+    <com.google.android.material.bottomsheet.BottomSheetDragHandleView
+        android:id="@+id/drag_handle"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
     <TextView
         android:id="@+id/message"
         android:layout_width="match_parent"
@@ -33,7 +41,7 @@
         android:textIsSelectable="true"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/drag_handle"
         tools:text="@tools:sample/lorem"
         />
 
