--- a/app/src/main/res/xml/preferences_user_interface.xml
+++ b/app/src/main/res/xml/preferences_user_interface.xml
@@ -25,6 +25,18 @@
     <PreferenceCategory
         android:title="@string/pc_ui">
 
+        <!-- These are set from code:
+        android:defaultValue : device/system default
+        android:entryValues  : Locale codes
+        android:entries      : DisplayName for the code
+
+        Do NOT use useSimpleSummaryProvider as it will cache the values.
+-->
+        <ListPreference
+            android:icon="@drawable/language_24px"
+            android:key="ui.locale"
+            android:title="@string/pt_ui_language" />
+
         <ListPreference
             android:defaultValue="0"
             android:entries="@array/pe_ui_theme_mode"
