refactor BottomSheet/Dialog/Delegates to have ALL logic either in the base classes for the BottomSheet/Dialog or in the Delegate class

--- a/app/src/main/res/layout/dialog_edit_bookshelf_filters_content.xml
+++ b/app/src/main/res/layout/dialog_edit_bookshelf_filters_content.xml
@@ -42,6 +42,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/drag_handle"
         app:title="@string/lbl_filters"
+        app:menu="@menu/edit_filters"
         />
 
     <androidx.recyclerview.widget.RecyclerView
