--- a/app/src/main/res/layout/dialog_edit_bookshelf_content.xml
+++ b/app/src/main/res/layout/dialog_edit_bookshelf_content.xml
@@ -40,6 +40,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/drag_handle"
+        app:menu="@menu/toolbar_action_save"
         app:title="@string/lbl_bookshelf"
         />
 
